# nexus

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  JOURNAL.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  main.go  nexus-auto-fix-nexus-fix-8d75b371-reliability-degradation.md  nexus-auto-fix-nexus-fix-d129202f-reliability-degradation.md  nexus-auto-fix-nexus-fix-e243c817-reliability-degradation.md  nexus-auto-fix-nexus-fix-ed44bf42-reliability-degradation.md  nexus-auto-fix-nexus-fix-fa5407a0-reliability-degradation.md  nexus-fix-ed44bf42.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
cmd/: completion.go  init.go  root.go  status.go  version.go
deploy/kind/: kind-config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PLUGIN_DEV.md  SECURITY_MODEL.md  SETUP.md  TROUBLESHOOTING.md  demo.cast
internal/config/: config.go  config_test.go  defaults.go  validation.go
internal/db/: cycle_store.go  db.go  incident_store.go  target_store.go
internal/model/: action.go  cycle.go  incident.go  incident_test.go  policy.go  target.go
internal/utils/: retry.go  (+3 more)
nexus/: __init__.py  cli.py
scripts/: demo.sh  setup-dev.sh  setup-kind.sh  teardown.sh
tests/: test_analyzer_compliance.py  test_analyzer_cost.py  test_analyzer_reliability.py  test_analyzer_security.py  test_api_auth.py  test_config.py  test_incident.py  test_opa_policy.py  test_remediator.py  test_stores.py  test_verifier.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+82 files in other folders)
